# homedir

./: .gitignore  config.yaml  install.conf.yaml  prime  readme.md
cmd/: bootstrap_env  install_homedir  venv_shell
doc/: protoprimer_upgrade.md  tmuxp_notes.md
dotfiles/: gitconfig
dst/default_env/: constraints.txt  proto_kernel.conf_env.json  proto_kernel.json
gconf/: install.conf.yaml  install_homedir.conf.yaml  lint_yaml.yaml  pre_commit.yaml  proto_kernel.json
homedir/: bash_profile  bashrc  gitconfig  gitconfig.author  inputrc  p10k.zsh  zshrc
homedir/claude/: settings.json
homedir/tmuxp/: ansible.yaml  ar.yaml  bg.yaml  pp.yaml
src/local_repo/: pyproject.toml
src/local_repo/main/local_repo/: cmd_bootstrap_env.py  cmd_install_homedir.py  repo_tree.py
src/local_repo/test/local_repo/: test_bootstrap_env.py  test_install_homedir.py
