[build-system]

requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "local_test"
version = "0.0.0"

classifiers = [
    # This package is local and is never published:
    "Private :: Do Not Upload",
]

# FT_84_11_73_28: supported python versions:
requires-python = ">=3.8"

dependencies = [
    "pytest",
    "pre-commit",
    "dotbot",
    "tmuxp",
    "protoprimer @ git+https://github.com/uvsmtid/protoprimer.git@093d80f520382349228623762a800bd21ccc2e5e#egg=protoprimer&subdirectory=src/protoprimer",
    "neoprimer @ git+https://github.com/uvsmtid/protoprimer.git@093d80f520382349228623762a800bd21ccc2e5e#egg=neoprimer&subdirectory=src/neoprimer",
]

[tool.setuptools.packages.find]
where = ["./main"]

[tool.setuptools.package-dir]
local_test = "./main/local_test"
